--- a/atma_assets/css/styles.css
+++ b/atma_assets/css/styles.css
@@ -100,6 +100,10 @@ a.btn:hover {
   font-size: 25px;
   font-weight: normal;
 }
+.vistor{
+  width: 300px;
+  height: 300px;
+}
 .header {
   background: #00BCD4;
   color: #fff;
