--- a/atma_assets/css/styles.css
+++ b/atma_assets/css/styles.css
@@ -101,8 +101,8 @@ a.btn:hover {
   font-weight: normal;
 }
 .vistor{
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
 }
 .header {
   background: #00BCD4;
@@ -621,6 +621,13 @@ a.btn:hover {
   height: 120px;
   position: absolute;
   left: 30px;
+}
+.contact-section .intro .visitor {
+  width: 120px;
+  height: 120px;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
 }
 .contact-section .intro p {
   margin-bottom: 15px;
